--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : nicolaszadeh.com
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Nicolas Zadeh"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,37 +22,37 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "Jean.jpg"
+  name             : "Nicolas Zadeh"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "PhD student in mathematics"
+  location         : "Brussels, Belgium"
+  employer         : "ULB"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "nicolaszadeh@outlook.com" 
 
   # Academic websites
   academia         : # URL
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  arxiv            : "https://arxiv.org/search/?query=%22nicolas+zadeh%22&searchtype=all&abstracts=show&order=-announced_date_first&size=50"
+  googlescholar    : "https://scholar.google.com/scholar?hl=fr&as_sdt=0%2C5&q=%22nicolas+zadeh%22&btnG="
+#  impactstory      : # URL
+#  orcid            : "http://orcid.org/yourorcidurl"
+#  semantic         : # URL
+ # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Nicolas-Zadeh-2?ev=hdr_xprf"
+#  scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "nicolaszadeh"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -222,12 +222,21 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  about:
     output: true
     permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
+  research_interests:
+    output: true
+    permalink: /:collection/:path/
+  # tags:
+    # output: true
+    # permalink: /tags/:name/
+  # categories:
+    # output: true
+    # permalink: /categories/:name/
 
 
 # These settings control how pages and collections are included in the site
@@ -268,10 +277,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _about
   - scope:
       path: ""
-      type: portfolio
+      type: about
     values:
       layout: single
       author_profile: true
@@ -337,15 +346,15 @@ tag_archive:
   path: /tags/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
-#   enabled:
-#     - categories
-#     - tags
-#   layouts:
-#     category: archive-taxonomy
-#     tag: archive-taxonomy
-#   permalinks:
-#     category: /categories/:name/
-#     tag: /tags/:name/
+  # enabled:
+    # - categories
+    # - tags
+  # layouts:
+    # category: archive-taxonomy
+    # tag: archive-taxonomy
+  # permalinks:
+    # category: /categories/:name/
+    # tag: /tags/:name/
 
 
 # HTML Compression
@@ -354,3 +363,5 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+    
+    
