Header, masthead changes; introduction of index.md and of about.md; implementation of responsive dark mode ; change of profile picture ; debugging on the side panel

--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,17 @@ title                    : nicolaszadeh.com
 title_separator          : "-"
 name                     : &name "Nicolas Zadeh"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : http://localhost:4000
+# url                      : https://www.nicolaszadeh.com
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/nicolaszadeh/mathwebsite"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Jean.jpg"
+  avatar           : "AmsterdamSunglasses2025.jpg"
   name             : "Nicolas Zadeh"
   pronouns         : # example: "she/her"  
   bio              : "PhD student in mathematics"
