--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: Research Interests
+  - title: "Research Interests"
     url: /research_interests/
 
   - title: "Talks"
@@ -30,6 +30,6 @@ main:
   #   url: /cv-json/
     
   - title: "About"
-    url: /markdown/
+    url: /about/
     
 
